--- a/surprise-frontend/package.json
+++ b/surprise-frontend/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "next-video": "^2.0.1",
