--- a/surprise-frontend/package.json
+++ b/surprise-frontend/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.474.0",
+    "mongoose": "^8.10.0",
     "next": "^15.1.6",
     "next-video": "^2.0.1",
     "react": "^19.0.0",
