--- a/surprise-frontend/package.json
+++ b/surprise-frontend/package.json
@@ -15,8 +15,9 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.474.0",
-    "mongoose": "^8.10.0",
+    "mongoose": "^8.11.0",
     "next": "^15.1.6",
+    "next-auth": "^4.24.11",
     "next-video": "^2.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -26,6 +27,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
