--- a/surprise-frontend/package.json
+++ b/surprise-frontend/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "express": "^4.21.2",
     "lucide-react": "^0.474.0",
     "mongoose": "^8.11.0",
     "next": "^15.1.6",
