--- a/surprise-frontend/package.json
+++ b/surprise-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-navigation-menu": "^1.2.4",
+    "@react-google-maps/api": "^2.20.6",
     "@stripe/stripe-js": "^5.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
